spec/fixtures/kubernetes_configuration/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acceptance-tests-date
  namespace: formbuilder-services-test-dev
  labels:
    run: acceptance-tests-date
spec:
  replicas: 1
  selector:
    matchLabels:
      run: acceptance-tests-date
  template:
    metadata:
      labels:
        run: acceptance-tests-date
    spec:
      containers:
      - name: acceptance-tests-date
        securityContext:
          runAsUser: 1001
        envFrom:
        - configMapRef:
            name: fb-acceptance-tests-date-config-map
        env:
          - name: RAILS_ENV
            value: 'production'
          - name: RAILS_SERVE_STATIC_FILES
            value: 'true'
          - name: RAILS_LOG_TO_STDOUT
            value: 'true'
          - name: USER_DATASTORE_URL
            value: http://fb-user-datastore-api-svc-test-dev.formbuilder-platform-test-dev/
          - name: SUBMITTER_URL
            value: http://fb-submitter-api-svc-test-dev.formbuilder-platform-test-dev/
          - name: FILESTORE_URL
            value: http://fb-user-filestore-api-svc-test-dev.formbuilder-platform-test-dev/
          - name: SUBMISSION_ENCRYPTION_KEY
            value: 65a27a35-c475-48b9-9a20-30142f14
          - name: SERVICE_SLUG
            value: acceptance-tests-date
          - name: PLATFORM_ENV
            value: test
          - name: DEPLOYMENT_ENV
            value: dev
          - name: SECRET_KEY_BASE
            value: 'fdfdd491d611aa1abef54cbf24a709a1bb31ff881a487f8c58c69399202b08f77019920f481e17b40dd7452361055534b9f91f172719ed98a088498242f96f59'
          - name: SERVICE_METADATA
            value: "{\"service_name\":\"acceptance-tests-date\",\"test_escaping\":\"I don't know\"}"
          - name: SENTRY_DSN
            value: 'sentry-dsn-test'
          - name: ENCODED_PRIVATE_KEY
            valueFrom:
              secretKeyRef:
                name: fb-acceptance-tests-date-secrets
                key: encoded_private_key
          - name: BASIC_AUTH_USER
            valueFrom:
              secretKeyRef:
                name: fb-acceptance-tests-date-secrets
                key: basic_auth_user
          - name: BASIC_AUTH_PASS
            valueFrom:
              secretKeyRef:
                name: fb-acceptance-tests-date-secrets
                key: basic_auth_pass
          - name: SERVICE_SECRET
            valueFrom:
              secretKeyRef:
                name: fb-acceptance-tests-date-secrets
                key: service_secret
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/formbuilder/fb-runner:latest-test
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
           limits:
            cpu: 150m
            memory: 300Mi
           requests:
            cpu: 10m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
